--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  animated_rating_stars: ^1.0.1
+
   bloc: ^8.1.2
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_rating_stars: ^1.0.3+4
+
+  dio: ^5.4.1
+  buildcondition: ^0.0.4
+  url_launcher: ^6.2.4
 
 dev_dependencies:
 
